packages/typ/tests/fixtures/diagnostics/0396_labels_wrong_y_type_10.ml
let pick_kappa ~x:(x : int) ~y:(y : bool) = x
let _ = pick_kappa ~x:9 ~y:10
